src/snapshots/common_mark_language_server__lsp__tests__workspace_symbol_request-2.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::WorkspaceSymbolRequest>(WorkspaceSymbolParams {\n        query: \"foo\".into(),\n        work_done_progress_params: WorkDoneProgressParams::default(),\n        partial_result_params: PartialResultParams::default(),\n    })"
---
Ok(
    Some(
        Flat(
            [
                SymbolInformation {
                    name: "# foo\n",
                    kind: String,
                    tags: None,
                    deprecated: None,
                    location: Location {
                        uri: Url {
                            scheme: "file",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: None,
                            port: None,
                            path: "/foo.md",
                            query: None,
                            fragment: None,
                        },
                        range: Range {
                            start: Position {
                                line: 1,
                                character: 0,
                            },
                            end: Position {
                                line: 2,
                                character: 0,
                            },
                        },
                    },
                    container_name: None,
                },
            ],
        ),
    ),
)
