src/snapshots/common_mark_language_server__lsp__tests__workspace_symbol_request.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::WorkspaceSymbolRequest>(WorkspaceSymbolParams {\n                query: String::new(),\n                work_done_progress_params: WorkDoneProgressParams::default(),\n                partial_result_params: PartialResultParams::default(),\n            }).unwrap().map(|symbols|\n        {\n            let mut symbols =\n                match symbols {\n                    WorkspaceSymbolResponse::Flat(xs) => xs,\n                    _ => unreachable!(),\n                };\n            symbols.sort_unstable_by(|left, right|\n                    left.name.cmp(&right.name));\n            symbols\n        })"
---
Some(
    [
        SymbolInformation {
            name: "# bar\n",
            kind: String,
            tags: None,
            deprecated: None,
            location: Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/bar.md",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 2,
                        character: 0,
                    },
                },
            },
            container_name: None,
        },
        SymbolInformation {
            name: "# foo\n",
            kind: String,
            tags: None,
            deprecated: None,
            location: Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/foo.md",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 2,
                        character: 0,
                    },
                },
            },
            container_name: None,
        },
    ],
)
